--- a/.env
+++ b/.env
@@ -35,7 +35,7 @@ AWS_S3_SECRET_ACCESS_KEY=
 #SMTP Email Configuration
 SMTP_PORT=465
 SMTP_HOST="smtp.gmail.com"
-SMTP_USER="periodpolmail@gmail.com" 
-SMTP_PASSWORD="diathugtnaqscxgo"
+SMTP_USER="" 
+SMTP_PASSWORD="hasPassworded"
 
 SMTP_FROM_EMAIL=""
